timer view & BE; transition to DayView
