# src/main/java/ua/belozorov/mafia/host/gameengine/GameController.java
@@ -4,10 +4,12 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.RestController;
 import ua.belozorov.mafia.host.generated.api.GamesApi;
-import ua.belozorov.mafia.host.generated.model.*;
+import ua.belozorov.mafia.host.generated.model.CreateGame201Response;
+import ua.belozorov.mafia.host.generated.model.GameResp;
+import ua.belozorov.mafia.host.generated.model.NextDay201Response;
+import ua.belozorov.mafia.host.generated.model.PlayerAssignmentReq;
 
 import java.util.ArrayList;
-import java.util.Map;
 
 @RestController
 @RequiredArgsConstructor
@@ -25,11 +27,12 @@ public class GameController implements GamesApi {
     @Override
     public GameResp getGame(Long id) {
         var game = gameService.getById(id);
-        return new GameResp()
-                .id(game.id())
-                .state(game.state().getValue())
-                .gameConfig(mapRoleConfiguration(game.roleConfiguration()))
-                ;
+        return GameMapper.INSTANCE.map(game);
+    }
+
+    @Override
+    public NextDay201Response nextDay(Long gameId) {
+        return new NextDay201Response().id(gameService.nextDay(gameId));
     }
 
     @Override
@@ -43,15 +46,5 @@ public class GameController implements GamesApi {
         }
 
         gameService.assignPlayers(gameId, players);
-    }
-
-    private GameRespGameConfig mapRoleConfiguration(Map<Role, Integer> rolesConfig) {
-        var descriptions = rolesConfig.entrySet().stream()
-                .map(e -> new RoleDescription()
-                        .name(e.getKey().toString().toLowerCase())
-                        .team(e.getKey().isRed() ? "red" : "black")
-                        .count(e.getValue())
-                ).toList();
-        return new GameRespGameConfig().roles(descriptions);
     }
 }
